added Errors.ts * updated openapi.yaml to match UserError type * updated web-client signup.tsx to implement error type annotations
