# web-server/src/orm/entities/users/User.ts
@@ -1,8 +1,7 @@
 import bcrypt from 'bcryptjs';
 import { Entity, PrimaryGeneratedColumn, Column, CreateDateColumn } from 'typeorm';
 
-import { CustomError } from 'utils/response/custom-error/CustomError';
-import { ErrorArray } from 'utils/response/custom-error/types';
+import { UserError } from 'utils/Errors';
 
 import { Countries } from './types';
 
@@ -65,25 +64,25 @@ export class User {
   setUsername(username: string) {
     const allowedCharacters = /^[A-Za-z0-9\.\-\_]*$/;
     const hasAlphanumeric = /[A-Za-z0-9]/;
-    const errors = new ErrorArray();
+    
+    const err: UserError = {};
 
     if (!username.match(allowedCharacters)) {
-      errors.put('username', 'Username has invalid characters');
+      err.username = `Username ${username} has invalid characters`;
+      throw err;
     }
 
     if (!username.match(hasAlphanumeric)) {
-      errors.put('username', 'Username must have at least one alphanumeric character');
+      err.username = `Username ${username} must have an alphanumeric character`;
+      throw err;
     }
 
     if (username.length < 3) {
-      errors.put('username', 'Username is too short');
+      err.username = `Username ${username} is too short`;
+      throw err;
     }
 
-    if (errors.isEmpty) {
-      this.username = username;
-    } else {
-      throw new CustomError(400, 'Validation', 'Username is invalid', null, errors);
-    }
+    this.username = username;
   }
 
   hashPassword() {
