# web-server/src/types/openapi-generated.ts
@@ -25,7 +25,11 @@ export interface paths {
         /** OK */
         200: unknown;
         /** Bad request */
-        400: unknown;
+        400: {
+          content: {
+            "application/json": components["schemas"]["UserError"];
+          };
+        };
       };
       requestBody: {
         content: {
@@ -302,6 +306,13 @@ export interface components {
     TaskSetter: components["schemas"]["TaskRead"] & {
       checkerId: number;
       validatorId?: number;
+    };
+    UserError: {
+      raw?: { [key: string]: unknown };
+      email?: string;
+      username?: string;
+      password?: string;
+      passwordConfirm?: string;
     };
   };
 }
