# web-server/src/types/openapi.yaml
@@ -36,6 +36,10 @@ paths:
           description: OK
         400:
           description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserError'
   /users/{id}:
     parameters:
       - in: path
@@ -379,3 +383,16 @@ components:
               type: integer
             validatorId:
               type: integer
+    UserError:
+      type: object
+      properties:
+        raw:
+          type: object
+        email:
+          type: string
+        username:
+          type: string
+        password:
+          type: string
+        passwordConfirm:
+          type: string
